取消私服配置

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
     </build>
 
     <!-- 推送到私服：mvn deploy -Dmaven.test.skip=true -->
-    <distributionManagement>
+    <!--<distributionManagement>
         <repository>
             <id>maven-releases</id>
             <name>Nexus Release Repository</name>
@@ -70,7 +70,7 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <!-- 从私服下载依赖 -->
+    &lt;!&ndash; 从私服下载依赖 &ndash;&gt;
     <repositories>
         <repository>
             <id>nexus</id>
@@ -96,6 +96,6 @@
                 <enabled>true</enabled>
             </releases>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories>-->
 
 </project>
